# configuration

./: .Xresources  .apvlvrc  .bashrc  .gitconfig  .gitignore  .gitignore_global  .gtkrc-2.0  .inputrc  .livestreamerrc  .tmux.conf  .vimrc  .xinitrc  .xprofile  .zshrc  README.md  dependencies  deploy-configs.yml  deploy.py  deps  deps_aur  init.sh  install.py  settings.py  todo  utils.py
.config/: compton.conf
.config/Thunar/: accels.scm  uca.xml
.config/cava/: config
.config/dunst/: dunstrc
.config/gtk-3.0/: gtk.css  settings.ini
.config/i3/: config
.config/i3blocks/: config  config.save
.config/mcabber/: mcabberrc
.config/mpd/: mpd.conf
.config/nvim/: .netrwhist  init.vim  init_for_editing.vim
.config/qutebrowser/: config.py  quickmarks
.config/ranger/: rc.conf
.config/termite/: config  config_for_ranger
.gnupg/: gpgconf.conf
.wallpaper/: default
Scripts/i3/: clear  mcabber_event  screenshot_focus  screenshot_full  spellchecker  spellchecker_en  spellchecker_ru  translate_trans  translate_ya_ru
Scripts/i3blocks/: battery  cpu_usage  memoryO  translate  volume  wifi
Scripts/test/: notify
Scripts/translate/: script.sh
auxiliary/: deploy.py  init.sh  server_user.sh  trizen.sh  utils.py
auxiliary/deploy/: configs.yml  deploy.js  package-lock.json  package.json
auxiliary/scripts/: trizen.sh
cheatsheets/: common.css
cheatsheets/i3/: index.html  style.css
cheatsheets/qutebrowser/: index.html  style.css
cheatsheets/tmux/: index.html  style.css
cheatsheets/zsh/: index.html  style.css
configs/: instance.tmpl
configs/desktop/: compton.conf  dunst.tmpl  dunstrc  flameshot.ini  i3.tmpl  i3_template  mimeapps.list  picom.conf  user-dirs.dirs
configs/git/: gitconfig  gitignore_global
configs/gromit-mpx/: gromit-mpx.cfg  gromit-mpx.ini
configs/gtk/: gtkrc-2.0  settings.ini
configs/misc/: Xresources  gdbinit  gis_weather  make-gpg-agent.sh  trizen.conf  xprofile  zathurarc
configs/music/: mpd
configs/nvim/: .luarc.json  coc-settings.json  init.lua  init.vim  lazy-lock.json  selene.toml  vim.yaml
configs/polybar/: config  config.ini  startup
configs/qutebrowser/: config.py  quickmarks  style.css
configs/rofi/: config.rasi  config.tmpl  style.rasi
configs/terminal/: bat  inputrc  kitty.conf  lesskeys  p10k.zsh  ranger  starship.toml  tealdeer.toml  tmux  zshrc
dependencies/: aur_packets  common_packets  packets
desktop/applications/: qute_link.desktop
desktop/i3/: config  config_template
desktop/i3blocks/: config  config_template
desktop/misc/: Xresources  gis_weather  pulse  ranger  trizen.conf  user-dirs.dirs  xprofile
desktop/polybar/: config
desktop/scripts/: cpp_clear  cpp_rename  drop_sync.sh  editor.sh  i3lock-blur  qute_do.sh  qute_editor.sh  temp  tview  (+4 more)
install/: __init__.py  desktop.py  i3blocks.py  misc.py  nvim.py  qutebrowser.py  settings.py  terminal.py  utils.py
links/: gotop.desktop  ncmpcpp.desktop  qute_link.desktop
misc/: gdb  mouse_index.theme  rtorrent
nvim/: coc-settings.json  init.vim  init_for_editing.vim
qutebrowser/: config.py  quickmarks  quickmarks_home  quickmarks_work
scripts/: dragon_screen  editor.sh  flameshot-wrapper.sh  nvimpager.sh  open_template_project  pause_resume_active_window.sh  pulseaudio-ctl.sh  pwndbg  qute_do.sh  qute_editor.sh  screen-lock.sh  screen-switcher.sh  screenshot_window  temp  tview
services/: compton.service  ddterminal.service  dropbox_monitor.service  dropbox_sync.service  dropbox_sync.timer  dunst.service  i3.target  ncmpcpp.service  picom.service  ranger.service  ssh-agent.service  tasks-pad.service  telegram.service  words-pad.service
templates/: open_existing_test.sh  open_test.sh  open_tmux_environment.sh
templates/cpp/: CMakeLists.txt  b  main.cpp
templates/cpp/src/: CMakeLists.txt  greet.cpp  greet.h  main.cpp
templates/cpp/tests/: CMakeLists.txt  example_test.cpp
templates/qml/: CMakeLists.txt  b  live  main.cpp  main.pro  main.qml
templates/qml/resources/: Custom_header.qml  main.qml  qtquickcontrols2.conf  resources.qrc
templates/qml/src/: CMakeLists.txt  main.cpp
templates/qt/: CMakeLists.txt  main.cpp
templates/qt/src/: CMakeLists.txt  main.cpp
templates/qt/tests/: CMakeLists.txt  example_test.cpp
terminal/: bashrc  install.py  termite  termite_for_ranger  tmux  zaw-bookmarks  zshrc
utils/: __init__.py  fs.py
(+166 files in other folders)
